package core.CRMCollaborator.domain.Entities;

public class CRMCollaborator {
}
