package core.Shared.domain.ValueObjects;

public class Date {
}
