package core.ShowRequest.domain.ValueObjects;

public class ShowDescription {
}
