@startuml

package "Customer " <<aggregate>> {
    class Customer <<Entity>> <<root>>{
    }

}

package "Figure " <<aggregate>> {

    class Figure <<Entity>> <<root>>{
        + code: Integer
        + version: Double
        + description : String
    }
}

package "Show " <<aggregate>>{

    class Description <<Value Object>>{
    }

    enum ShowStatus <<Value Object>>{
    }

    class Location <<Value Object>>{
        + latitude: Double
        + longitude: Double
    }

    enum Status <<Value Object>>{
    }

    class ShowDescription <<Value Object>>{
    }

    class CRMCollaborator <<Entity>>{
        + id: Integer
    }

    class Show <<Entity>>{
    }

    class ShowRequest <<Entity>>{
        + qnt_drones: Integer
    }

    class ShowProposal <<Entity>>{
    }

    'ShowRequest -> x
    ShowRequest --> "0..*" Figure : requests new
    ShowRequest --> "1" Description : description
    ShowRequest --> "1" CRMCollaborator : submitted by
    ShowRequest --> "1" Customer: requested by
    ShowRequest --> "1" Location: place
    ShowRequest --> "1" Status: status
    ShowRequest --> "1" ShowProposal: generated with



    'Show -> x
    Show --> "1..*" Figure: sequence of
    Show --> "1" ShowStatus: showStatus
    Show --> "1" ShowDescription: description
    Show --> "1" CRMCollaborator : scheduled by

    'ShowProposal -> x
    ShowProposal --> "1" CRMCollaborator: generated by
    ShowProposal --> "1" Status: status
    ShowProposal --> "1" Show: generated with

}

package Shared {

    class Time <<Value Object>>{
    }

    class Name <<Value Object>>{
    }

    class Email <<Value Object>>{
    }

    class PhoneNumber <<Value Object>>{
    }

    class Date <<Value Object>>{
    }

    'CRM Collaborator -> x
    CRMCollaborator --> "1" Name: name
    CRMCollaborator --> "1" Email: email
    CRMCollaborator --> "1" PhoneNumber: phoneNumber

   'ShowRequest -> x
   ShowRequest --> "1" Time : duration
   ShowRequest --> "1" Date : startTime

   'Show -> x
   Show --> "1" Date : date
   Show --> "1" Time : time
}

@enduml